# Mandelbrot_Fractal_Explorer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  sdlinput.cpp  sdlinput.h
bmp/: a.out  bmp.cpp  bmp.h  sdlinput.cpp  sdlinput.h  test.cpp
src/: bmp.cpp  bmp.h  keys.cpp  keys.hpp  main.cpp  mandel_calculation.cpp  mandel_calculation.hpp  params.h  sdlinput.cpp  sdlinput.h  sdlinput.hpp  shader_progs.cpp  shader_progs.hpp  window.cpp  window.hpp
src/bmp/: bmp.cpp  bmp.hpp
src/shaders/: color.fs  color.vs  fragmentShader.fs  vertexShader.vs
